--- a/AbstractGeometry/AbstractGeometry.vcxproj
+++ b/AbstractGeometry/AbstractGeometry.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{9b31048f-89aa-47ab-9b85-be8fbceae9a8}</ProjectGuid>
-    <RootNamespace>TheZoo</RootNamespace>
+    <ProjectGuid>{c2ae89dc-c866-4403-8a8c-14c34717fdd3}</ProjectGuid>
+    <RootNamespace>AbstractGeometry</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
